# schemas/book.go
@@ -308,9 +308,8 @@ type BookChapterCreateSchema struct {
 
 type BookCreateSchema struct {
 	Title          string          `form:"title" validate:"required,max=200"`
-	Blurb          string          `form:"blurb" validate:"required,max=1000,min=100"`
+	Blurb          string          `form:"blurb" validate:"required,wordcount_max=1000,wordcount_min=100"`
 	GenreSlug      string          `form:"genre_slug" validate:"required"`
-	SubSectionSlug string          `form:"sub_section_slug" validate:"required"`
 	TagSlugs       []string        `form:"tag_slugs" validate:"required"`
 	AgeDiscretion  choices.AgeType `form:"age_discretion" validate:"required,age_discretion_validator"`
 }
